--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier \"src/**/*.{js,html,scss}\" --write",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "clean": "rm -rf node_modules && npm i"
   },
   "eslintConfig": {
     "extends": [
